--- a/mysite/map_page/templates/map_page/map_page.html
+++ b/mysite/map_page/templates/map_page/map_page.html
@@ -13,6 +13,7 @@
     {{ page.field2 }}
     <br>
     {% embed 'https://www.youtube.com/watch?v=Ffu-2jEdLPw' %}
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1bUVdnm5IeyDqQjoGCePO8jIM8UNWQjo&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
 {% endblock %}
 
 
