--- a/django-project/django-project/maseproject/templates/index.html
+++ b/django-project/django-project/maseproject/templates/index.html
@@ -13,21 +13,21 @@
         <div class="logo">🌿 Fii Verde</div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">Acasă</a></li>
-                <li><a href="#">Despre</a></li>
-                <li><a href="#">Activități</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/">Acasă</a></li>
+                <li><a href="/despre">Despre</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/usersapp/register">Autentificare</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
         <div class="hero-text">
-            <h1>Salvează Hârtia, Salvează Planeta</h1>
+            <h1>Salvează hârtia, salvează planeta!</h1>
             <p>Alătură-te inițiativei „Fii Verde” pentru un viitor sustenabil prin reciclarea corectă a hârtiei.</p>
             <div class="hero-buttons">
-                <a href="#" class="btn-filled">Începe acum</a>
-                <a href="#" class="btn-outline">Află mai mult</a>
+                <a href="/usersapp/register" class="btn-filled">Începe să colectezi</a>
+                <a href="/despre" class="btn-outline">Află mai multe</a>
             </div>
         </div>
     </section>
