--- a/django-project/django-project/usersapp/templates/dashboard.html
+++ b/django-project/django-project/usersapp/templates/dashboard.html
@@ -31,6 +31,8 @@
     </nav>
 </header>
 
+
+
 <section class="dashboard-section">
     <div class="container">
         <h1>Profil utilizator</h1>
@@ -57,6 +59,7 @@
                 <input type="text" id="companie" name="companie" value="{{ user.companie }}">
             {% endif %}
 
+            {% if user_not_has_map_access %}
             <label for="adresa">Adresă</label>
             <input type="text" id="adresa" name="adresa" value="{{ user.adresa }}">
 
@@ -85,8 +88,9 @@
             <div class="form-buttons">
                 <button type="submit">Salvează modificările</button>
             </div>
+            {% endif %}
 
-            {% if user.nume|lower == "admin" and user.prenume|lower == "admin" %}
+            {% if user_has_map_access %}
             <h2 style="margin-top: 60px;">Harta tuturor cosurilor</h2>
             <div id="map-all-users" style="width: 100%; height: 500px; margin-bottom: 50px; border-radius: 12px;"></div>
 
@@ -113,10 +117,19 @@
                             content: infoContent
                         });
 
+
+                        // Alegem culoarea markerului în funcție de status_cos
+                        const iconUrl = marker.status_cos
+                            ? "http://maps.google.com/mapfiles/ms/icons/green-dot.png"
+                            : "http://maps.google.com/mapfiles/ms/icons/red-dot.png";
+
                         var gMarker = new google.maps.Marker({
                             position: position,
                             map: map,
-                            title: marker.name
+                            title: marker.name,
+                            icon: {
+                                url: iconUrl
+                            }
                         });
 
                         gMarker.addListener('click', function () {
